@@ -14,11 +14,13 @@ set -e # Exit early if any commands fail
 # - Edit .codecrafters/compile.sh to change how your program compiles remotely
 (
   cd "$(dirname "$0")" # Ensure compile steps are run within the repository directory
-  SBT_OPTS="--enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow" sbt -error assembly
+  scala-cli package src/main/scala/ \
+    -q --power --assembly --force --server=false --scala-version=3.8.3 \
+    -o /tmp/codecrafters-build-interpreter-scala
 )
 
 # Copied from .codecrafters/run.sh
 #
 # - Edit this to change how your program runs locally
 # - Edit .codecrafters/run.sh to change how your program runs remotely
-exec java -jar ./target/scala-3.8.2/interpreter.jar "$@"
+exec java -jar /tmp/codecrafters-build-interpreter-scala "$@"
